--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="detail"
-            type="com.example.myapplicationtracker.DetailViewModel" />
+            name="detailViewModel"
+            type="com.example.myapplicationtracker.detail.DetailViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,33 +18,34 @@
             android:id="@+id/weight"
             android:layout_width="160dp"
             android:layout_height="160dp"
+            android:layout_marginLeft="15dp"
             android:background="@drawable/weight_view_background"
             android:gravity="center"
             android:textSize="35sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.229"
+            app:layout_constraintVertical_bias="0.4"
+            app:setWeight="@{detailViewModel.weight}"
             tools:text="50" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:textColor="@color/string_color"
             android:textSize="22sp"
             app:layout_constraintBottom_toTopOf="@id/compare"
             app:layout_constraintStart_toEndOf="@id/weight"
             app:layout_constraintTop_toTopOf="@id/weight"
+            app:setDate="@{detailViewModel.weight}"
             tools:text="05/11" />
 
         <TextView
             android:id="@+id/compare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:textColor="@color/string_color"
+            android:textColor="#2979ff"
             android:textSize="23sp"
             app:layout_constraintBottom_toTopOf="@id/fighting_string"
             app:layout_constraintStart_toEndOf="@id/weight"
@@ -55,14 +56,14 @@
             android:id="@+id/fighting_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:text="@{@string/cheering_phrase(detailViewModel.phrase)}"
             android:textColor="@color/string_color"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@id/weight"
             app:layout_constraintStart_toEndOf="@id/weight"
             app:layout_constraintTop_toBottomOf="@id/compare"
-            tools:text="Keep Going!!" />
+            tools:text="Keep Going!! yeah" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
