--- a/app/src/main/res/layout/fragment_today_weight_tracker.xml
+++ b/app/src/main/res/layout/fragment_today_weight_tracker.xml
@@ -7,13 +7,13 @@
 
         <variable
             name="todayWeightViewModel"
-            type="com.example.myapplicationtracker.TodayWeightViewModel" />
+            type="com.example.myapplicationtracker.weighttracker.TodayWeightViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TodayWeightFragment">
+        tools:context=".weighttracker.TodayWeightFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
